--- a/backend/package.json
+++ b/backend/package.json
@@ -17,14 +17,18 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "start:dev:migrate": "npx prisma generate && npx prisma migrate deploy && npm run start:dev"
   },
   "dependencies": {
+    "@nestjs/cache-manager": "^2.1.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.2",
     "@prisma/client": "^5.0.0",
+    "cache-manager": "^5.2.3",
+    "cache-manager-redis-yet": "^4.1.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
