--- a/backend/exemple.env
+++ b/backend/exemple.env
@@ -1,13 +1,7 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+DATABASE_URL="postgresql://postgres:postgres@db:5432/recipehub?schema=public"
 
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+REDIS_HOST="redis"
+REDIS_PORT=6379
+REDIS_PASSWORD="redis"
 
-DATABASE_URL="postgresql://postgres:test@127.0.0.1:5432/recipehub?schema=public"# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
-
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
-DATABASE_URL="postgresql://postgres:test@127.0.0.1:5432/recipehub?schema=public"
+REDIS_REFRESH_TOKEN_DB=0
