add social provider for auth

--- a/backend/exemple.env
+++ b/backend/exemple.env
@@ -5,3 +5,22 @@ REDIS_PORT=6379
 REDIS_PASSWORD="redis"
 
 REDIS_REFRESH_TOKEN_DB=0
+
+JWT_SECRET="secret"
+SESSION_SECRET="secret"
+
+GOOGLE_CLIENT_ID=""
+GOOGLE_CLIENT_SECRET=""
+GOOGLE_CALLBACK_URL=""
+
+FACEBOOK_CLIENT_ID=""
+FACEBOOK_CLIENT_SECRET=""
+FACEBOOK_CALLBACK_URL=""
+
+GITHUB_CLIENT_ID=""
+GITHUB_CLIENT_SECRET=""
+GITHUB_CALLBACK_URL=""
+
+TWITTER_CLIENT_ID=""
+TWITTER_CLIENT_SECRET=""
+TWITTER_CALLBACK_URL=""
