--- a/backend/package.json
+++ b/backend/package.json
@@ -32,9 +32,14 @@
     "@prisma/client": "^5.0.0",
     "cache-manager": "^4.1.0",
     "cache-manager-redis-yet": "^4.1.2",
+    "express-session": "^1.17.3",
     "passport": "^0.6.0",
+    "passport-facebook": "^3.0.0",
+    "passport-github": "^1.1.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.4",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
@@ -43,10 +48,15 @@
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
+    "@types/express-session": "^1.17.7",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
+    "@types/passport-facebook": "^2.1.11",
+    "@types/passport-github": "^1.1.7",
+    "@types/passport-google-oauth20": "^2.0.11",
     "@types/passport-jwt": "^3.0.9",
     "@types/passport-local": "^1.0.35",
+    "@types/passport-twitter": "^1.0.37",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "@typescript-eslint/parser": "^5.59.11",
