add hashing password

--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,8 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.2",
     "@prisma/client": "^5.0.0",
+    "@types/bcrypt": "^5.0.0",
+    "bcrypt": "^5.1.0",
     "cache-manager": "^4.1.0",
     "cache-manager-redis-yet": "^4.1.2",
     "express-session": "^1.17.3",
