add jwt expiration in .env variable

--- a/backend/exemple.env
+++ b/backend/exemple.env
@@ -7,6 +7,7 @@ REDIS_PASSWORD="redis"
 REDIS_REFRESH_TOKEN_DB=0
 
 JWT_SECRET="secret"
+JWT_EXPIRES_IN="60s"
 SESSION_SECRET="secret"
 
 GOOGLE_CLIENT_ID=""
