--- a/backend/package.json
+++ b/backend/package.json
@@ -43,7 +43,8 @@
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.4",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
