--- a/backend/exemple.env
+++ b/backend/exemple.env
@@ -25,3 +25,7 @@ GITHUB_CALLBACK_URL=""
 TWITTER_CLIENT_ID=""
 TWITTER_CLIENT_SECRET=""
 TWITTER_CALLBACK_URL=""
+
+REDIS_CACHE_ROLE_DB=0
+REDIS_CACHE_ROLE_ANONYMOUS_TTL=7 # days
+REDIS_CACHE_ROLE_TTL=1 # days
