--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,9 @@
     "seed": "ts-node ./prisma/seed.ts"
   },
   "dependencies": {
+    "@adminjs/express": "^6.0.0",
+    "@adminjs/nestjs": "^6.0.1",
+    "@adminjs/prisma": "^5.0.1",
     "@nestjs/cache-manager": "^2.1.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.0.0",
@@ -34,9 +37,11 @@
     "@nestjs/swagger": "^7.1.2",
     "@prisma/client": "^5.0.0",
     "@types/bcrypt": "^5.0.0",
+    "adminjs": "^7.2.0",
     "bcrypt": "^5.1.0",
     "cache-manager": "^4.1.0",
     "cache-manager-redis-yet": "^4.1.2",
+    "express-formidable": "^1.2.0",
     "express-session": "^1.17.3",
     "nest-casl": "^1.8.11",
     "passport": "^0.6.0",
