replace bcrypt to bcryptjs for docker and add configuration AdminJS

--- a/backend/exemple.env
+++ b/backend/exemple.env
@@ -29,3 +29,12 @@ TWITTER_CALLBACK_URL=""
 REDIS_CACHE_ROLE_DB=0
 REDIS_CACHE_ROLE_ANONYMOUS_TTL=7 # days
 REDIS_CACHE_ROLE_TTL=1 # days
+
+REDIS_CACHE_RECIPE_DB=0
+REDIS_CACHE_RECIPE_TTL=3600000
+
+RECIPE_PER_PAGE=20
+
+ADMIN_COOKIE_NAME="admin"
+ADMIN_COOKIE_PASSWORD="secret"
+ADMIN_SECRET="secret"
