--- a/backend/package.json
+++ b/backend/package.json
@@ -37,8 +37,9 @@
     "@nestjs/swagger": "^7.1.2",
     "@prisma/client": "^5.0.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/bcryptjs": "^2.4.2",
     "adminjs": "^7.2.0",
-    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "cache-manager": "^4.1.0",
     "cache-manager-redis-yet": "^4.1.2",
     "express-formidable": "^1.2.0",
