add env var to redirect provider auth

--- a/backend/exemple.env
+++ b/backend/exemple.env
@@ -26,6 +26,8 @@ TWITTER_CLIENT_ID=""
 TWITTER_CLIENT_SECRET=""
 TWITTER_CALLBACK_URL=""
 
+REDIRECT_AUTH_PROVIDER=""
+
 REDIS_CACHE_RECIPE_DB=0
 REDIS_CACHE_RECIPE_TTL=3600000
 
