--- a/backend/package.json
+++ b/backend/package.json
@@ -64,6 +64,7 @@
     "@types/express": "^4.17.17",
     "@types/express-session": "^1.17.7",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^1.4.7",
     "@types/node": "^20.4.6",
     "@types/passport-facebook": "^2.1.11",
     "@types/passport-github": "^1.1.7",
