--- a/backend/exemple.env
+++ b/backend/exemple.env
@@ -36,3 +36,6 @@ RECIPE_PER_PAGE=20
 ADMIN_COOKIE_NAME="admin"
 ADMIN_COOKIE_PASSWORD="secret"
 ADMIN_SECRET="secret"
+
+MULTER_RECIPE_PICTURES_DEST="./uploads/recipe"
+APP_URL='http://localhost:3000'
