--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "start:dev:migrate": "npx prisma generate && npx prisma migrate deploy && npm run start:dev"
+    "start:dev:migrate": "npx prisma generate && npx prisma migrate deploy && npm run start:dev",
+    "start:migrate": "npx prisma generate && npx prisma migrate deploy && npm run start"
   },
   "prisma": {
     "seed": "ts-node ./prisma/seed.ts"
