--- a/frontend/.exemple.env
+++ b/frontend/.exemple.env
@@ -1,2 +1,3 @@
-WEBSITE_URL="https://localhost:8080/"
-API_URL="http://localhost:3000"
+WEBSITE_URL="http://recipeshub.localhost/"
+API_URL_CLIENT_SIDE="http://api.recipeshub.localhost"
+API_URL_SERVER_SIDE="http://app:3000"
